# linto-stt

./: .dockerignore  .envdefault  .gitignore  .gitmodules  Dockerfile  Dockerfile.ctranslate2  Dockerfile.ctranslate2.cpu  Dockerfile.torch  Dockerfile.torch.cpu  Jenkinsfile  LICENCE  Makefile  README.md  RELEASE.md  docker-compose.yml  docker-entrypoint.sh  healthcheck.sh  heartbeat.json  heartbeat.sh  kate_run.py  lin_to_vosk.py  load_alignment_model.py  main.py  pyproject.toml  requirements.ctranslate2.txt  requirements.torch.txt  requirements.txt  run.py  tools.py  wait-for-it.sh
celery_app/: celeryapp.py  tasks.py
document/: swagger.yml
http_server/: confparser.py  ingress.py  serving.py  swagger.py
kaldi/: Dockerfile  README.md  RELEASE.md  docker-entrypoint.sh  lin_to_vosk.py  requirements.txt
kyutai/: Dockerfile  Dockerfile.wrapper  PROTOCOL.md  README.md  RELEASE.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  requirements.wrapper.txt
lintostt/: __init__.py
nemo/: .envdefault  .envdefault_offline  .envdefault_streaming  Dockerfile  README.md  RELEASE.md  docker-entrypoint.sh  requirements.txt
nemo_backend/: Dockerfile  RELEASE.md  requirements.txt
punctuation/: recasepunc.py  requirements.cpu.txt  requirements.txt
speaker-diarization/: speakerDiarization.py
stt/: __init__.py
test/: .envtest  README.md  build_and_run_container.sh  launch_redis.sh  requirements.txt  run_server.sh  test.py  test.sh  test_celery.py  test_config.ini  test_deployment.sh  test_streaming.py
webclient/: audio-processor.js  audioprocessor.html  worklet.html
(+83 files in other folders)
